adding eigendecomp based implementation - need to add adaptive weighting for smacof

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -27,11 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_points = 2500\n",
+    "n_points = 4000\n",
     "noise = 6.2\n",
     "noise_thresh = 2.2\n",
     "\n",
@@ -57,120 +57,8 @@
     "    exp_params=exp_params,\n",
     "    verbose=True,\n",
     "    reattach=False,\n",
-    "    nbrhood_size=1\n",
     ")\n",
     "orcmanl.fit(return_dict['data'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def kernel_distances(k_ij, d_ij, tau):\n",
-    "    \"\"\"\n",
-    "    Computes the distance of an edge under the logarithmic barrier kernel \n",
-    "    \"\"\"\n",
-    "    return -1/tau * np.log(k_ij + 2) + (d_ij * tau + np.log(3))/tau\n",
-    "\n",
-    "def compute_kernel_distances(G, tau, rep_factor=10):\n",
-    "    \"\"\"\n",
-    "    Computes the distances of all edges in a graph under the logarithmic barrier kernel\n",
-    "    \"\"\"\n",
-    "    kdists = []\n",
-    "    for u, v in G.edges():\n",
-    "        k_ij = G[u][v]['ricciCurvature']\n",
-    "        if G[u][v]['shortcut'] == 1:\n",
-    "            G[u][v]['weight'] = G[u][v]['weight'] * rep_factor\n",
-    "        d_ij = G[u][v]['weight']\n",
-    "        G[u][v]['kernel_distance'] = kernel_distances(k_ij, d_ij, tau)\n",
-    "        kdists.append(G[u][v]['kernel_distance'])\n",
-    "        orcs.append(k_ij)\n",
-    "    return G, kdists, orcs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G_orc = orcmanl.G_ann.copy()\n",
-    "G_orc, kdists, orcs = compute_kernel_distances(G_orc, 0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import networkx as nx\n",
-    "from scipy.sparse.csgraph import shortest_path\n",
-    "from multiprocessing import Pool\n",
-    "\n",
-    "def process_row(args):\n",
-    "    \"\"\"Compute a single row of the APSP matrix.\"\"\"\n",
-    "    i, predecessors, A_euc_distance, n = args\n",
-    "    row_distances = np.zeros(n)\n",
-    "    for j in range(n):\n",
-    "        if i == j:\n",
-    "            row_distances[j] = 0\n",
-    "            continue\n",
-    "        total_weight_A = 0\n",
-    "        current = j\n",
-    "        while current != i:\n",
-    "            prev = predecessors[i, current]\n",
-    "            if prev == -9999:  # Path does not exist\n",
-    "                total_weight_A = np.inf\n",
-    "                break\n",
-    "            total_weight_A += A_euc_distance[prev, current]\n",
-    "            current = prev\n",
-    "        row_distances[j] = total_weight_A\n",
-    "    return i, row_distances\n",
-    "\n",
-    "def compute_apsp_with_dual_weights_multiprocessing(G, weight_B, weight_A):\n",
-    "    \"\"\"\n",
-    "    Compute the all-pairs shortest path matrix where:\n",
-    "    - Paths are shortest with respect to 'weight_B'.\n",
-    "    - Distances are accumulated with respect to 'weight_A'.\n",
-    "    \n",
-    "    This version parallelizes path reconstruction and weight accumulation using multiprocessing.\n",
-    "    \"\"\"\n",
-    "    # Step 1: Get adjacency matrices for both weights\n",
-    "    A_kernel_distance = nx.to_numpy_array(G, weight=weight_B)\n",
-    "    A_euc_distance = nx.to_numpy_array(G, weight=weight_A)\n",
-    "\n",
-    "    # Step 2: Compute shortest paths and predecessors with respect to 'weight_B'\n",
-    "    apsp_weight_B, predecessors = shortest_path(\n",
-    "        A_kernel_distance, directed=False, unweighted=False, return_predecessors=True\n",
-    "    )\n",
-    "\n",
-    "    # Step 3: Use multiprocessing to process rows in parallel\n",
-    "    n = A_kernel_distance.shape[0]\n",
-    "    apsp_weight_A = np.zeros((n, n))\n",
-    "\n",
-    "    args = [(i, predecessors, A_euc_distance, n) for i in range(n)]\n",
-    "\n",
-    "    with Pool() as pool:\n",
-    "        results = pool.map(process_row, args)\n",
-    "\n",
-    "    # Step 4: Populate the APSP matrix\n",
-    "    for i, row_distances in results:\n",
-    "        apsp_weight_A[i] = row_distances\n",
-    "\n",
-    "    return apsp_weight_A, apsp_weight_B"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "apsp_weight_A, apsp_weight_B = compute_apsp_with_dual_weights_multiprocessing(G_orc, 'kernel_distance', 'weight')"
    ]
   },
   {
@@ -186,9 +74,12 @@
     "    orcmanl=orcmanl,\n",
     "    exp_params=exp_params,\n",
     "    verbose=True,\n",
+    "    temperature=5\n",
     ")\n",
-    "emb = isorc.fit_kPCA()\n",
-    "plot_data_2D(emb, color=color[isorc.G.nodes()], title=None)"
+    "emb_mds = isorc.fit_MDS()\n",
+    "emb_iso = isorc.fit_isomap(n_components=2)\n",
+    "plot_data_2D(emb_mds, color=color[isorc.G.nodes()], title=None)\n",
+    "plot_data_2D(emb_iso, color=color[isorc.G.nodes()], title=None)"
    ]
   },
   {
@@ -197,21 +88,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_graph_3D(return_dict['data'], orcmanl.G_pruned, title=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.manifold import Isomap\n",
+    "# get list of shortcut edges from orcmanl\n",
+    "shortcut_edges_indices = orcmanl.shortcut_edges\n",
+    "# convert to binary array\n",
+    "shortcut_edges = np.zeros(len(orcmanl.G.edges))\n",
+    "shortcut_edges[shortcut_edges_indices] = 1\n",
     "\n",
-    "isomap = Isomap(n_components=2, metric='precomputed')\n",
-    "emb = isomap.fit_transform(apsp_weight_A)\n",
-    "\n",
-    "plot_data_2D(emb, color=color[G_orc.nodes()], title=None)"
+    "plt.scatter(orcmanl.orcs, np.log(isorc.lb_dists), c=shortcut_edges)\n"
    ]
   },
   {
@@ -226,13 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
     "%autoreload 2\n",
     "# quadratics\n",
-    "n_points = 1200\n",
+    "n_points = 2500\n",
     "noise = 0.15\n",
     "noise_thresh = 0.4\n",
     "\n",
@@ -248,99 +131,9 @@
     "orcmanl = ORCManL(\n",
     "    exp_params=exp_params,\n",
     "    verbose=True,\n",
-    "    reattach=True\n",
+    "    reattach=False\n",
     ")\n",
     "orcmanl.fit(return_dict['data'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G_orc = orcmanl.G_ann.copy()\n",
-    "G_orc, kdists, orcs = compute_kernel_distances(G_orc, 1e-2, rep_factor=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "apsp_weight_A, apsp_weight_B = compute_apsp_with_dual_weights_multiprocessing(G_orc, 'kernel_distance', 'weight')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "isomap = Isomap(n_components=2, metric='precomputed')\n",
-    "emb_A = isomap.fit_transform(apsp_weight_A)\n",
-    "emb_B = isomap.fit_transform(apsp_weight_B)\n",
-    "\n",
-    "plot_data_2D(emb_A, color=return_dict['cluster'][G_orc.nodes()], title=None)\n",
-    "plot_data_2D(emb_B, color=return_dict['cluster'][G_orc.nodes()], title=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "umap_emb = umap.UMAP(n_components=2, n_neighbors=15, min_dist=0.1).fit_transform(return_dict['data'])\n",
-    "plot_data_2D(umap_emb, color=return_dict['cluster'], title=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# quadratics # more noise\n",
-    "n_points = 1200\n",
-    "noise = 0.20\n",
-    "noise_thresh = 0.4\n",
-    "\n",
-    "return_dict = quadratics(n_points=n_points, noise=noise, noise_thresh=noise_thresh, supersample=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "orcmanl = ORCManL(\n",
-    "    exp_params=exp_params,\n",
-    "    verbose=True,\n",
-    "    reattach=True\n",
-    ")\n",
-    "orcmanl.fit(return_dict['data'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G_orc = orcmanl.G_ann.copy()\n",
-    "G_orc, kdists, orcs = compute_kernel_distances(G_orc, 1e-10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "apsp_weight_A, apsp_weight_B = compute_apsp_with_dual_weights_multiprocessing(G_orc, 'kernel_distance', 'weight')"
    ]
   },
   {
@@ -350,7 +143,18 @@
    "outputs": [],
    "source": [
     "%autoreload 2\n",
-    "plot_graph_2D(return_dict['data'], G_orc, node_color=return_dict['cluster'][G_orc.nodes()], edge_color=kdists, title=None)"
+    "from src.isorc import *\n",
+    "\n",
+    "isorc = ISORC(\n",
+    "    orcmanl=orcmanl,\n",
+    "    exp_params=exp_params,\n",
+    "    verbose=True,\n",
+    "    temperature=5\n",
+    ")\n",
+    "emb_mds = isorc.fit_MDS()\n",
+    "emb_iso = isorc.fit_isomap(n_components=2)\n",
+    "plot_data_2D(emb_mds, color=return_dict['cluster'][isorc.G.nodes()], title=None)\n",
+    "plot_data_2D(emb_iso, color=return_dict['cluster'][isorc.G.nodes()], title=None)"
    ]
   },
   {
@@ -359,13 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "isomap = Isomap(n_components=2, metric='precomputed')\n",
-    "emb_A = isomap.fit_transform(apsp_weight_A)\n",
-    "emb_B = isomap.fit_transform(apsp_weight_B)\n",
-    "\n",
-    "plot_data_2D(emb_A, color=return_dict['cluster'][G_orc.nodes()], title=None)\n",
-    "plot_data_2D(emb_B, color=return_dict['cluster'][G_orc.nodes()], title=None)"
+    "plot_graph_2D(return_dict['data'], orcmanl.G_ann, title=None, edge_color=orcmanl.orcs)"
    ]
   },
   {
@@ -374,13 +172,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "umap_emb = umap.UMAP(n_components=2, n_neighbors=15, min_dist=0.1).fit_transform(return_dict['data'])\n",
+    "umap_emb = umap.UMAP(n_components=2, n_neighbors=15).fit_transform(return_dict['data'])\n",
     "plot_data_2D(umap_emb, color=return_dict['cluster'], title=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,11 +265,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_samples = 1500\n",
+    "n_samples = 10000\n",
     "mnist_data, mnist_labels = get_mnist_data(n_samples, label=None)"
    ]
   },
@@ -495,42 +293,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G_orc = orcmanl.G_ann.copy()\n",
-    "G_orc, kdists, orcs = compute_kernel_distances(G_orc, 1e-3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "apsp_weight_A, apsp_weight_B = compute_apsp_with_dual_weights_multiprocessing(G_orc, 'kernel_distance', 'weight')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "isomap = Isomap(n_components=2, metric='precomputed')\n",
-    "emb_A = isomap.fit_transform(apsp_weight_A)\n",
-    "emb_B = isomap.fit_transform(apsp_weight_B)\n",
-    "\n",
-    "plot_data_2D(emb_A, color=mnist_labels[G_orc.nodes()], title=None)\n",
-    "plot_data_2D(emb_B, color=mnist_labels[G_orc.nodes()], title=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "umap_emb = umap.UMAP(n_components=2, n_neighbors=15, min_dist=0.1).fit_transform(mnist_data)\n",
-    "plot_data_2D(umap_emb, color=mnist_labels, title=None)"
+    "isorc = ISORC(\n",
+    "    orcmanl=orcmanl,\n",
+    "    exp_params=exp_params,\n",
+    "    verbose=True,\n",
+    "    temperature=5\n",
+    ")\n",
+    "emb_mds = isorc.fit_MDS()\n",
+    "emb_iso = isorc.fit_isomap()\n",
+    "plot_data_2D(emb_mds, color=mnist_labels[isorc.G.nodes()], title=None)\n",
+    "plot_data_2D(emb_iso, color=mnist_labels[isorc.G.nodes()], title=None)"
    ]
   },
   {
