--- a/notebooks/experiments/orc_fa.ipynb
+++ b/notebooks/experiments/orc_fa.ipynb
@@ -10,58 +10,19 @@
     "from src.orcml import *\n",
     "from src.plotting import *\n",
     "from src.utils.graph_utils import *\n",
-    "from src.isorc import *\n",
+    "# from src.isorc import *\n",
+    "from src.orcfa import *\n",
     "from src.utils.embeddings import *\n",
     "from sklearn.manifold import TSNE\n",
     "import umap\n",
     "import numpy as np\n",
-    "import torchvision\n",
-    "\n",
-    "%load_ext autoreload\n",
     "\n",
     "exp_params = {\n",
     "    'mode': 'nbrs',\n",
-    "    'n_neighbors': 25,\n",
-    "    'epsilon': None,\n",
-    "    'lda': 1e-5,\n",
-    "    'delta': 0.8\n",
+    "    'n_neighbors': 15,\n",
+    "    'sigma': 1.5\n",
     "}\n",
-    "\n",
-    "\n",
-    "def orc_fa(G, a, b):\n",
-    "    A_orc = nx.to_numpy_array(G, weight='ricciCurvature')\n",
-    "    A_edge = nx.to_numpy_array(G, weight='weight')\n",
-    "    \n",
-    "    edge_mask = np.where(A_edge > 0, 1, 0)\n",
-    "\n",
-    "    assert b >= a, \"b must be greater than a\"\n",
-    "    # map each row to [a, b]\n",
-    "    max_orc_row = 1\n",
-    "    min_orc_row = -2\n",
-    "\n",
-    "    A_orc_normalized = (b - a) / (max_orc_row - min_orc_row) * (A_orc - min_orc_row) + a\n",
-    "    A_orc_normalized = (A_orc_normalized + A_orc_normalized.T) / 2\n",
-    "    A_orc_normalized *= edge_mask\n",
-    "\n",
-    "    G_normalized = G.copy()\n",
-    "    node_indices = list(G.nodes())\n",
-    "    for i, (u, v) in enumerate(G_normalized.edges):\n",
-    "        idx_u = node_indices.index(u)\n",
-    "        idx_v = node_indices.index(v)\n",
-    "        assert A_edge[idx_u, idx_v] != 0 or u == v, \"index misalignment\"\n",
-    "        G_normalized[u][v]['orc_weight'] = A_orc_normalized[idx_u, idx_v]\n",
-    "    \n",
-    "    def fa(G, weight):\n",
-    "        spectral_init = nx.spectral_layout(G, weight='weight')\n",
-    "        print('Finished spectral initialization')\n",
-    "        # force directed layout\n",
-    "        node_mass = {node:1 for node in G.nodes()}\n",
-    "        pos = nx.forceatlas2_layout(G, pos=spectral_init, seed=42, weight=weight, node_mass=node_mass)\n",
-    "        print('Finished spring layout')\n",
-    "        return pos\n",
-    "    \n",
-    "    pos = fa(G_normalized, weight='orc_weight')\n",
-    "    return pos, G_normalized"
+    "%load_ext autoreload"
    ]
   },
   {
@@ -71,12 +32,96 @@
    "outputs": [],
    "source": [
     "%autoreload 2\n",
-    "# quadratics\n",
+    "from src.orcfa import *\n",
+    "####### circles #######\n",
     "n_points = 2000\n",
-    "noise = 0.175\n",
+    "noise = 0.1\n",
+    "noise_thresh = None\n",
+    "return_dict = concentric_circles(n_points=n_points, factor=0.4, noise=noise, noise_thresh=noise_thresh, supersample=True)\n",
+    "\n",
+    "umap_emb = umap.UMAP(n_neighbors=25, min_dist=0.1, metric='euclidean').fit_transform(return_dict['data'])\n",
+    "\n",
+    "X = return_dict['data']\n",
+    "orcfa = ORCFA(exp_params)\n",
+    "embedding = orcfa.fit_transform(X)\n",
+    "\n",
+    "plot_graph_2D(umap_emb, orcfa.G, node_color=None, title=None, edge_width=0.05, node_size=0.0)\n",
+    "plt.title('UMAP Embedding')\n",
+    "\n",
+    "plot_graph_2D(embedding, orcfa.G, node_color=None, edge_color=orcfa.affinities, title=None, edge_width=0.05, node_size=0.0)\n",
+    "plt.title('ORCFA Embedding with annotated affinities')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orcfa.plot_spectral_init()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%autoreload 2\n",
+    "####### swiss roll #######\n",
+    "n_points = 2000\n",
+    "noise = 1\n",
+    "noise_thresh = None\n",
+    "return_dict = swiss_roll(n_points=n_points, noise=noise, noise_thresh=noise_thresh, supersample=False)\n",
+    "\n",
+    "umap_emb = umap.UMAP(n_neighbors=25, min_dist=0.1, metric='euclidean').fit_transform(return_dict['data'])\n",
+    "\n",
+    "X = return_dict['data']\n",
+    "orcfa = ORCFA(exp_params)\n",
+    "embedding = orcfa.fit_transform(X)\n",
+    "\n",
+    "plot_graph_2D(umap_emb, orcfa.G, node_color=None, title=None, edge_width=0.05, node_size=0.0)\n",
+    "plt.title('UMAP Embedding')\n",
+    "\n",
+    "plot_graph_2D(embedding, orcfa.G, node_color=None, edge_color=orcfa.affinities, title=None, edge_width=0.05, node_size=0.0)\n",
+    "plt.title('ORCFA Embedding with annotated affinities')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orcfa.plot_spectral_init()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%autoreload 2\n",
+    "# cassini oval\n",
+    "n_points = 2000\n",
+    "noise = 0.05\n",
     "noise_thresh = None\n",
     "\n",
-    "return_dict = quadratics(n_points=n_points, noise=noise, noise_thresh=noise_thresh, supersample=True)"
+    "return_dict = cassini(n_points=n_points, noise=noise, noise_thresh=noise_thresh, supersample=False)\n",
+    "plot_data_2D(return_dict['data'], color=None, title=None, node_size=3)\n",
+    "\n",
+    "umap_emb = umap.UMAP(n_neighbors=25, min_dist=0.1, metric='euclidean').fit_transform(return_dict['data'])\n",
+    "\n",
+    "X = return_dict['data']\n",
+    "orcfa = ORCFA(exp_params)\n",
+    "embedding = orcfa.fit_transform(X)\n",
+    "\n",
+    "plot_graph_2D(umap_emb, orcfa.G, node_color=None, title=None, edge_width=0.05, node_size=0.0)\n",
+    "plt.title('UMAP Embedding')\n",
+    "\n",
+    "plot_graph_2D(embedding, orcfa.G, node_color=None, edge_color=orcfa.affinities, title=None, edge_width=0.05, node_size=0.0)\n",
+    "plt.title('ORCFA Embedding with annotated edge affinities')"
    ]
   },
   {
@@ -85,57 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orcmanl = ORCManL(\n",
-    "    exp_params=exp_params,\n",
-    "    verbose=True,\n",
-    "    reattach=True,\n",
-    ")\n",
-    "orcmanl.fit(return_dict['data'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def isorc_fa(orcmanl):\n",
-    "    isorc = ISORC(\n",
-    "        orcmanl=orcmanl,\n",
-    "        exp_params=exp_params,\n",
-    "        verbose=True,\n",
-    "        uniform=False,\n",
-    "        temperature=1\n",
-    "    )\n",
-    "    apsp_energy = isorc.apsp_energy.copy()\n",
-    "    # convert to affinities\n",
-    "    def energy_to_affinity(energy, a):\n",
-    "        affinity = a * (np.exp(-energy**2/energy.max()) - 0.5)\n",
-    "        return affinity\n",
-    "    apsp_affinities = energy_to_affinity(apsp_energy, a=3)\n",
-    "\n",
-    "    # now construct the graph\n",
-    "    G = isorc.G.copy()\n",
-    "    node_indices = list(G.nodes())\n",
-    "    affinities = []\n",
-    "    for i, (u, v) in enumerate(G.edges):\n",
-    "        idx_u = node_indices.index(u)\n",
-    "        idx_v = node_indices.index(v)\n",
-    "        assert isorc.A_energy[idx_u, idx_v] != 0 or u == v, \"index misalignment\"\n",
-    "        G[u][v]['orc_weight'] = apsp_affinities[idx_u, idx_v]\n",
-    "        affinities.append(apsp_affinities[idx_u, idx_v])\n",
-    "\n",
-    "    def fa(G, weight):\n",
-    "        spectral_init = nx.spectral_layout(G, weight='weight')\n",
-    "        print('Finished spectral initialization')\n",
-    "        # force directed layout\n",
-    "        node_mass = {node:1 for node in G.nodes()}\n",
-    "        pos = nx.forceatlas2_layout(G, pos=spectral_init, seed=42, weight=weight, node_mass=node_mass)\n",
-    "        print('Finished spring layout')\n",
-    "        return pos\n",
-    "\n",
-    "    pos = fa(G, weight='orc_weight')\n",
-    "    return pos, G"
+    "orcfa.plot_spectral_init()"
    ]
   },
   {
@@ -144,132 +139,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos, G = isorc_fa(orcmanl)\n",
-    "plot_graph_2D(pos, G, node_color=return_dict['cluster'][G.nodes()], edge_color=orcmanl.orcs, title=None, edge_width=0.05, node_size=0.2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def get_mnist_data(n_samples, label=None):\n",
-    "    \"\"\"\n",
-    "    Get n_samples MNIST data points with the specified label. If label is None, get n_samples random data points.\n",
-    "    Parameters:\n",
-    "\n",
-    "    n_samples: int\n",
-    "        Number of data points to get\n",
-    "    label: int or None\n",
-    "        Label of the data points to get. If None, get random data points.\n",
-    "    Returns:\n",
-    "    ----------\n",
-    "    mnist_data: np.ndarray\n",
-    "        n_samples x 784 array of MNIST data points\n",
-    "    mnist_labels: np.ndarray\n",
-    "        n_samples array of MNIST labels\n",
-    "    \"\"\"\n",
-    "    transform = torchvision.transforms.Compose([\n",
-    "        torchvision.transforms.ToTensor(),\n",
-    "        torchvision.transforms.Lambda(lambda x: x.view(-1))\n",
-    "    ])\n",
-    "    mnist = torchvision.datasets.MNIST('/home/tristan/Research/Fa24/isorc/data', train=True, download=True, transform=transform)\n",
-    "    mnist_data = torch.stack([x for x, _ in mnist]).numpy().astype(np.float64)\n",
-    "    mnist_labels = torch.tensor([y for _, y in mnist]).numpy().astype(np.float64)\n",
-    "    if label is not None:\n",
-    "        label_indices = np.where(mnist_labels == label)[0]\n",
-    "        np.random.seed(0)\n",
-    "        np.random.shuffle(label_indices)\n",
-    "        label_indices = label_indices[:n_samples]\n",
-    "        mnist_data = mnist_data[label_indices]\n",
-    "        mnist_labels = mnist_labels[label_indices]\n",
-    "    else:\n",
-    "        np.random.seed(0)\n",
-    "        indices = np.random.choice(mnist_data.shape[0], n_samples, replace=False)\n",
-    "        mnist_data = mnist_data[indices]\n",
-    "        mnist_labels = mnist_labels[indices]\n",
-    "    return mnist_data, mnist_labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mnist_data, mnist_labels = get_mnist_data(n_samples=2000, label=None)\n",
-    "# orcmanl = ORCManL(\n",
-    "#     exp_params=exp_params,\n",
-    "#     verbose=True,\n",
-    "#     reattach=True,\n",
-    "# )\n",
-    "# orcmanl.fit(mnist_data)\n",
     "%autoreload 2\n",
-    "# isorc = ISORC(\n",
-    "#     orcmanl=orcmanl,\n",
-    "#     exp_params=exp_params,\n",
-    "#     verbose=True,\n",
-    "#     uniform=False,\n",
-    "#     temperature=1\n",
-    "# )\n",
-    "# plot orc vs energy\n",
-    "def plot_energy():\n",
-    "    from src.utils.graph_utils import energy\n",
-    "    orcs = np.linspace(-1.99, 1, 100)\n",
-    "    energies = [energy(orc) for orc in orcs]\n",
-    "    plt.figure()\n",
-    "    plt.scatter(orcs, energies)\n",
-    "    plt.xlabel('ORC')\n",
-    "    plt.ylabel('Energy')\n",
-    "plot_energy()\n",
+    "# torii\n",
+    "n_points = 3000\n",
+    "noise = 0.5\n",
+    "noise_thresh = None\n",
+    "from src.orcfa import ORCFA\n",
     "\n",
-    "apsp_energy = isorc.apsp_energy.copy()\n",
-    "# convert to affinities\n",
-    "def energy_to_affinity(energy, a=4, sigma=7.5e-2):\n",
-    "    norm_energy = energy/(energy.max())\n",
-    "    affinity = a * (np.exp(-norm_energy**2/sigma) - 0.5)\n",
-    "    return affinity, norm_energy\n",
+    "return_dict = torus(n_points=n_points, noise=noise, noise_thresh=noise_thresh, supersample=False, double=True)\n",
     "\n",
-    "def plot_affinity():\n",
-    "    energies = np.linspace(0.01, 1, 100)\n",
-    "    affinities, _ = energy_to_affinity(energies)\n",
-    "    plt.figure()\n",
-    "    plt.scatter(energies, affinities)\n",
-    "    plt.xlabel('Normalized Energy')\n",
-    "    plt.ylabel('Affinity')\n",
-    "plot_affinity()\n",
+    "umap_emb = umap.UMAP(n_neighbors=25, min_dist=0.1, metric='euclidean').fit_transform(return_dict['data'])\n",
     "\n",
-    "apsp_affinities, apsp_energy_norm = energy_to_affinity(apsp_energy)\n",
+    "X = return_dict['data']\n",
+    "orcfa = ORCFA(exp_params)\n",
+    "embedding = orcfa.fit_transform(X)\n",
     "\n",
-    "# now construct the graph\n",
-    "G = isorc.G.copy()\n",
-    "node_indices = list(G.nodes())\n",
-    "affinities = []\n",
-    "norm_energies = []\n",
-    "for i, (u, v) in enumerate(G.edges):\n",
-    "    idx_u = node_indices.index(u)\n",
-    "    idx_v = node_indices.index(v)\n",
-    "    assert isorc.A_energy[idx_u, idx_v] != 0 or u == v, \"index misalignment\"\n",
-    "    G[u][v]['orc_weight'] = apsp_affinities[idx_u, idx_v]\n",
-    "    affinities.append(apsp_affinities[idx_u, idx_v])\n",
-    "    norm_energies.append(apsp_energy_norm[idx_u, idx_v])\n",
+    "plot_graph_2D(umap_emb, orcfa.G, node_color=None, title=None, edge_width=0.05, node_size=0.0);\n",
+    "plt.title('UMAP Embedding')\n",
     "\n",
-    "plt.figure()\n",
-    "plt.hist(norm_energies, bins=100)\n",
-    "plt.xlim([0, 1])\n",
-    "plt.xlabel('Normalized Energy')\n",
-    "plt.ylabel('Count')\n",
-    "plt.title('Energy distribution')\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.hist(affinities, bins=100)\n",
-    "plt.xlabel('Affinity')\n",
-    "plt.ylabel('Count')\n",
-    "plt.title('Affinity distribution')\n",
-    "pos = fa(G, weight='orc_weight')\n",
-    "plot_graph_2D(pos, G, node_color=mnist_labels[G.nodes()], edge_color=affinities, title=None, edge_width=0.03, node_size=0.2)"
+    "plot_graph_2D(embedding, orcfa.G, node_color=None, edge_color=orcfa.affinities, title=None, edge_width=0.05, node_size=0.0);\n",
+    "plt.title('ORCFA Embedding with annotated affinities')"
    ]
   },
   {
@@ -278,87 +167,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def isorc_fa(orcmanl, a, sigma, plot=False):\n",
-    "    isorc = ISORC(\n",
-    "        orcmanl=orcmanl,\n",
-    "        exp_params=exp_params,\n",
-    "        verbose=True,\n",
-    "        uniform=False,\n",
-    "        temperature=1\n",
-    "    )\n",
-    "    apsp_energy = isorc.apsp_energy.copy()\n",
-    "    # convert to affinities\n",
-    "    def energy_to_affinity(energy, a=a, sigma=sigma):\n",
-    "        norm_energy = energy/(energy.max())\n",
-    "        affinity = a * (np.exp(-norm_energy**2/sigma) - 0.5)\n",
-    "        return affinity, norm_energy\n",
-    "    apsp_affinities, apsp_energy_norm = energy_to_affinity(apsp_energy)\n",
+    "orcfa.plot_spectral_init()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%autoreload 2\n",
+    "from src.orcfa import ORCFA\n",
     "\n",
-    "    # now construct the graph\n",
-    "    G = isorc.G.copy()\n",
-    "    node_indices = list(G.nodes())\n",
-    "    affinities = []\n",
-    "    norm_energies = []\n",
-    "    for i, (u, v) in enumerate(G.edges):\n",
-    "        idx_u = node_indices.index(u)\n",
-    "        idx_v = node_indices.index(v)\n",
-    "        assert isorc.A_energy[idx_u, idx_v] != 0 or u == v, \"index misalignment\"\n",
-    "        G[u][v]['orc_weight'] = apsp_affinities[idx_u, idx_v]\n",
-    "        affinities.append(apsp_affinities[idx_u, idx_v])\n",
-    "        norm_energies.append(apsp_energy_norm[idx_u, idx_v])\n",
+    "mnist_data, mnist_labels = get_mnist_data(n_samples=6000, label=None)\n",
+    "orcfa = ORCFA(exp_params)\n",
+    "embedding = orcfa.fit_transform(mnist_data)\n",
+    "plot_graph_2D(embedding, orcfa.G, node_color=mnist_labels[orcfa.G.nodes()], edge_color=orcfa.affinities, edge_width=0.05, node_size=0.2, title='ORCFA Embedding with annotated affinities')\n",
     "\n",
-    "    def fa(G, weight):\n",
-    "        spectral_init = nx.spectral_layout(G, weight='weight')\n",
-    "        print('Finished spectral initialization')\n",
-    "        # force directed layout\n",
-    "        node_mass = {node:1 for node in G.nodes()}\n",
-    "        pos = nx.forceatlas2_layout(G, pos=spectral_init, seed=42, weight=weight, node_mass=node_mass)\n",
-    "        print('Finished spring layout')\n",
-    "        return pos\n",
-    "\n",
-    "    if plot:\n",
-    "        def plot_energy():\n",
-    "            from src.utils.graph_utils import energy\n",
-    "            orcs = np.linspace(-1.99, 1, 100)\n",
-    "            energies = [energy(orc) for orc in orcs]\n",
-    "            plt.figure()\n",
-    "            plt.scatter(orcs, energies)\n",
-    "            plt.xlabel('ORC')\n",
-    "            plt.ylabel('Energy')\n",
-    "        plot_energy()\n",
-    "        def plot_affinity():\n",
-    "            energies = np.linspace(0.01, 1, 100)\n",
-    "            affinities, _ = energy_to_affinity(energies)\n",
-    "            plt.figure()\n",
-    "            plt.scatter(energies, affinities)\n",
-    "            plt.xlabel('Normalized Energy')\n",
-    "            plt.ylabel('Affinity')\n",
-    "        plot_affinity()        \n",
-    "        plt.figure()\n",
-    "        plt.hist(norm_energies, bins=100)\n",
-    "        plt.xlim([0, 1])\n",
-    "        plt.xlabel('Normalized Energy')\n",
-    "        plt.ylabel('Count')\n",
-    "        plt.title('Energy distribution')\n",
-    "\n",
-    "        plt.figure()\n",
-    "        plt.hist(affinities, bins=100)\n",
-    "        plt.xlabel('Affinity')\n",
-    "        plt.ylabel('Count')\n",
-    "        plt.title('Affinity distribution')\n",
-    "        \n",
-    "    pos = fa(G, weight='orc_weight')\n",
-    "    return pos, G, norm_energies, affinities\n",
-    "\n",
-    "mnist_data, mnist_labels = get_mnist_data(n_samples=2000, label=None)\n",
-    "orcmanl = ORCManL(\n",
-    "    exp_params=exp_params,\n",
-    "    verbose=True,\n",
-    "    reattach=True,\n",
-    ")\n",
-    "orcmanl.fit(mnist_data)\n",
-    "pos, G, norm_energies, affinities = isorc_fa(orcmanl, a=4, sigma=1e-1, plot=True)\n",
-    "plot_graph_2D(pos, G, node_color=mnist_labels[G.nodes()], edge_color=affinities, title=None, edge_width=0.03, node_size=0.2)"
+    "umap_emb = umap.UMAP(n_neighbors=25, min_dist=0.1, metric='euclidean').fit_transform(mnist_data)\n",
+    "plot_graph_2D(umap_emb, orcfa.G, node_color=mnist_labels[orcfa.G.nodes()], edge_width=0.05, node_size=0.2, title='UMAP Embedding')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orcfa.plot_spectral_init()\n",
+    "orcfa.plot_affinities()"
    ]
   },
   {
