--- a/notebooks/experiments/umap_vs_orc.ipynb
+++ b/notebooks/experiments/umap_vs_orc.ipynb
@@ -15,9 +15,6 @@
     "from sklearn.manifold import TSNE\n",
     "import umap\n",
     "import numpy as np\n",
-    "import torchvision\n",
-    "\n",
-    "%load_ext autoreload\n",
     "\n",
     "exp_params = {\n",
     "    'mode': 'nbrs',\n",
@@ -25,22 +22,9 @@
     "    'epsilon': None,\n",
     "    'lda': 1e-5,\n",
     "    'delta': 0.8\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%autoreload 2\n",
-    "# quadratics\n",
-    "n_points = 2000\n",
-    "noise = 0.175\n",
-    "noise_thresh = None\n",
+    "}\n",
     "\n",
-    "return_dict = quadratics(n_points=n_points, noise=noise, noise_thresh=noise_thresh, supersample=True)"
+    "%load_ext autoreload"
    ]
   },
   {
@@ -49,67 +33,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "######### Edge length scaling vs ORC ###############\n",
+    "\n",
+    "# compute edge-wise length scaling in G\n",
+    "def plot_edge_length_scaling(G, ref, data, orcs):\n",
+    "    edge_lengths_ref = []\n",
+    "    edge_lengths_data = []\n",
+    "    for edge in G.edges:\n",
+    "        edge_lengths_ref.append(np.linalg.norm(ref[edge[0]] - ref[edge[1]]))\n",
+    "        edge_lengths_data.append(np.linalg.norm(data[edge[0]] - data[edge[1]]))\n",
+    "    edge_lengths_ref = np.array(edge_lengths_ref)\n",
+    "    edge_lengths_data = np.array(edge_lengths_data)\n",
+    "    length_scaling = edge_lengths_data / edge_lengths_ref\n",
+    "\n",
+    "    # compute edge-wise length scaling in G\n",
+    "    orcs = np.array(orcs)\n",
+    "    # plot edge length scaling vs ORC\n",
+    "    plt.figure()\n",
+    "    plt.scatter(length_scaling, orcs, s=2)\n",
+    "    plt.xlabel('Edge length scaling factor')\n",
+    "    plt.ylabel('ORC')\n",
+    "    plt.title('Edge length scaling vs ORC for UMAP embedding')\n",
+    "\n",
+    "####### quadratics #######\n",
+    "n_points = 2000\n",
+    "noise = 0.175\n",
+    "noise_thresh = None\n",
+    "return_dict = quadratics(n_points=n_points, noise=noise, noise_thresh=noise_thresh, supersample=True)\n",
     "orcmanl = ORCManL(\n",
     "    exp_params=exp_params,\n",
     "    verbose=True,\n",
     "    reattach=True,\n",
     ")\n",
     "orcmanl.fit(return_dict['data'])\n",
-    "G = orcmanl.G.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plot_data_2D(return_dict['data'], color=None, title=None, node_size=3)\n",
-    "plt.title('Original Data')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "umap_emb = umap.UMAP(n_neighbors=25, min_dist=0.1, metric='euclidean').fit_transform(return_dict['data'])\n",
-    "plot_graph_2D(umap_emb, G, node_color=return_dict['cluster'][G.nodes()], edge_color=orcmanl.orcs, title=None, edge_width=0.15, node_size=0.0)\n",
-    "plt.title('UMAP Embedding with annotated edge ORC')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%autoreload 2\n",
-    "# quadratics\n",
-    "n_points = 2000\n",
-    "noise = 0.1\n",
-    "noise_thresh = None\n",
-    "\n",
-    "return_dict = concentric_circles(n_points=n_points, factor=0.4, noise=noise, noise_thresh=noise_thresh, supersample=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_data_2D(return_dict['data'], color=None, title=None, node_size=3)\n",
-    "plt.title('Original Data')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.title('Original Data')\n",
     "orcmanl = ORCManL(\n",
     "    exp_params=exp_params,\n",
     "    verbose=True,\n",
@@ -117,52 +75,55 @@
     ")\n",
     "orcmanl.fit(return_dict['data'])\n",
     "G = orcmanl.G.copy()\n",
-    "\n",
     "umap_emb = umap.UMAP(n_neighbors=25, min_dist=0.1, metric='euclidean').fit_transform(return_dict['data'])\n",
-    "plot_graph_2D(umap_emb, G, node_color=return_dict['cluster'][G.nodes()], edge_color=orcmanl.orcs, title=None, edge_width=0.15, node_size=0.0)\n",
-    "plt.title('UMAP Embedding with annotated edge ORC')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plot_graph_2D(umap_emb, G, node_color=None, edge_color=orcmanl.orcs, title=None, edge_width=0.05, node_size=0.0)\n",
+    "plt.title('UMAP Embedding with annotated edge ORC')\n",
+    "plot_edge_length_scaling(G, return_dict['data'], umap_emb, orcmanl.orcs)\n",
     "\n",
-    "def orc_fa(G, a, b, scaling_ratio=2):\n",
-    "    A_orc = nx.to_numpy_array(G, weight='ricciCurvature')\n",
-    "    A_edge = nx.to_numpy_array(G, weight='weight')\n",
-    "    \n",
-    "    edge_mask = np.where(A_edge > 0, 1, 0)\n",
     "\n",
-    "    assert b >= a, \"b must be greater than a\"\n",
-    "    # map each row to [a, b]\n",
-    "    max_orc_row = 1\n",
-    "    min_orc_row = -2\n",
+    "####### circles #######\n",
+    "n_points = 2000\n",
+    "noise = 0.1\n",
+    "noise_thresh = None\n",
+    "return_dict = concentric_circles(n_points=n_points, factor=0.4, noise=noise, noise_thresh=noise_thresh, supersample=True)\n",
+    "plot_data_2D(return_dict['data'], color=None, title=None, node_size=3)\n",
+    "plt.title('Original Data')\n",
+    "orcmanl = ORCManL(\n",
+    "    exp_params=exp_params,\n",
+    "    verbose=True,\n",
+    "    reattach=True,\n",
+    ")\n",
+    "orcmanl.fit(return_dict['data'])\n",
+    "G = orcmanl.G.copy()\n",
+    "umap_emb = umap.UMAP(n_neighbors=25, min_dist=0.1, metric='euclidean').fit_transform(return_dict['data'])\n",
+    "plot_graph_2D(umap_emb, G, node_color=None, edge_color=orcmanl.orcs, title=None, edge_width=0.05, node_size=0.0)\n",
+    "plt.title('UMAP Embedding with annotated edge ORC')\n",
+    "plot_edge_length_scaling(G, return_dict['data'], umap_emb, orcmanl.orcs)\n",
     "\n",
-    "    A_orc_normalized = (b - a) / (max_orc_row - min_orc_row) * (A_orc - min_orc_row) + a\n",
-    "    A_orc_normalized = (A_orc_normalized + A_orc_normalized.T) / 2\n",
-    "    A_orc_normalized *= edge_mask\n",
-    "\n",
-    "    G_normalized = G.copy()\n",
-    "    node_indices = list(G.nodes())\n",
-    "    for i, (u, v) in enumerate(G_normalized.edges):\n",
-    "        idx_u = node_indices.index(u)\n",
-    "        idx_v = node_indices.index(v)\n",
-    "        assert A_edge[idx_u, idx_v] != 0 or u == v, \"index misalignment\"\n",
-    "        G_normalized[u][v]['orc_weight'] = A_orc_normalized[idx_u, idx_v]\n",
-    "    \n",
-    "    spectral_init = nx.spectral_layout(G_normalized, weight='weight')\n",
-    "    print('Finished spectral initialization')\n",
-    "    # force directed layout\n",
-    "    node_mass = {node:1 for node in G_normalized.nodes()}\n",
-    "    pos = nx.forceatlas2_layout(G_normalized, pos=spectral_init, seed=42, weight='orc_weight', scaling_ratio=scaling_ratio, node_mass=node_mass)\n",
-    "    print('Finished spring layout')\n",
-    "    return pos, G_normalized\n",
-    "\n",
-    "pos, G_normalized = orc_fa(G, 0, 1, scaling_ratio=2)\n",
-    "plot_graph_2D(pos, G_normalized, node_color=return_dict['cluster'][G_normalized.nodes()], edge_color=orcmanl.orcs, title=None, edge_width=0.15, node_size=0.0)"
+    "####### swiss roll #######\n",
+    "n_points = 2000\n",
+    "noise = 0.5\n",
+    "noise_thresh = None\n",
+    "return_dict = swiss_roll(n_points=n_points, noise=noise, noise_thresh=noise_thresh, supersample=False)\n",
+    "orcmanl = ORCManL(\n",
+    "    exp_params=exp_params,\n",
+    "    verbose=True,\n",
+    "    reattach=True,\n",
+    ")\n",
+    "orcmanl.fit(return_dict['data'])\n",
+    "G = orcmanl.G.copy()\n",
+    "# rotate data about z axis by 15 degrees\n",
+    "R = np.array([[np.cos(np.pi/12), -np.sin(np.pi/12), 0], [np.sin(np.pi/12), np.cos(np.pi/12), 0], [0, 0, 1]])\n",
+    "X = np.dot(return_dict['data'], R)\n",
+    "plt.figure()\n",
+    "plt.scatter(X[:, 0], X[:, 2], s=2)\n",
+    "# turn off axes\n",
+    "plt.axis('off')\n",
+    "plt.title('Original Data')\n",
+    "umap_emb = umap.UMAP(n_neighbors=25, min_dist=0.1, metric='euclidean').fit_transform(return_dict['data'])\n",
+    "plot_graph_2D(umap_emb, G, node_color=None, edge_color=orcmanl.orcs, title=None, edge_width=0.1, node_size=0.0)\n",
+    "plt.title('UMAP Embedding with annotated edge ORC')\n",
+    "plot_edge_length_scaling(G, return_dict['data'], umap_emb, orcmanl.orcs)"
    ]
   },
   {
